--- a/style.css
+++ b/style.css
@@ -82,6 +82,21 @@ button:active {
   font-size: 1.5rem;
 }
 
+/* loader */
+.loader {
+  border: 16px solid #d6cdcd; 
+  border-top: 16px solid #4796cb; 
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 /* Media Query: For Tablet or Smaller */
 
 @media screen and (max-width: 1000px) {
